refactor: View logic split into distinct packages (#117)
* refactor: View logic split into distinct packages

Signed-off-by: Anajrim <itroublve99@gmail.com>

* follow Law of Demeter

Signed-off-by: Anajrim <itroublve99@gmail.com>

* refactor: update HUD and InventoryView to use controller for inventory management

- Updated PersistenceService to v0.0.2 where now the state cannot be 'Asleep' during the loading of saves

- InventoryView is decoupled from HUDView

- WeatherEffects uses the proper 'stop' method provided by effects now

Signed-off-by: Anajrim <itroublve99@gmail.com>

* test: update test to reflect transient state

Signed-off-by: Anajrim <itroublve99@gmail.com>

* refactor: law of demeter

Signed-off-by: Anajrim <itroublve99@gmail.com>

* feat: add custom font support

Signed-off-by: Anajrim <itroublve99@gmail.com>

* fix: font size of the clock

Signed-off-by: Anajrim <itroublve99@gmail.com>

* include font file

Signed-off-by: Anajrim <itroublve99@gmail.com>

* Fix formatting and improve README clarity

Correct formatting issues and enhance clarity in the README.

---------

Signed-off-by: Anajrim <itroublve99@gmail.com>